# idou

./: '  CHANGELOG.md  LICENSE  README.md  Setup.hs  idou.cabal  song1.yaml
.github/: copilot-instructions.md
app/: Main.hs
cbits/: miniaudio_decode_helpers.c  miniaudio_helpers.c  miniaudio_rb_helpers.c  miniaudio_userdata.c
config/: audio.yaml  drums.yaml  song.yaml
config/patches/: warm-pad.yaml
src/Audio/: Config.hs  Envelope.hs  Filter.hs  Oscillator.hs  Patch.hs  Thread.hs  Types.hs
src/Audio/Filter/: Biquad.hs  Types.hs
src/Audio/Patch/: Loader.hs
src/Audio/Thread/: InstrumentTable.hs  Render.hs  Types.hs  Voice.hs
src/Engine/Config/: FlatYaml.hs
src/Engine/Core/: Queue.hs  Thread.hs
src/Midi/: Control.hs  Play.hs
src/Midi/Play/: Util.hs
src/Midi/ZMidi/Core/: DataTypes.hs  ReadFile.hs
src/Midi/ZMidi/Core/Internal/: ExtraTypes.hs  ParserMonad.hs
src/Perf/: Baseline.hs
src/Player/: Automation.hs  Instrument.hs  Runtime.hs  Thread.hs  Timeline.hs
src/Player/Timeline/: Arrangement.hs  Explain.hs  Parse.hs  Runtime.hs  Types.hs
src/Sound/: Miniaudio.hs
src/Sound/Miniaudio/: Decode.hs  RingBuffer.hs
studio/: index.html  package-lock.json  package.json
studio/src/: App.tsx  styles.css
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/src/: main.rs
studio/src/components/: MelodyGrid.tsx  PatchGraphCanvas.tsx
studio/src/lib/: note.ts  patch.ts  song.ts  validation.ts
studio/src/store/: studioStore.ts
test/: Main.hs  TestSupport.hs
test/Tests/: Audio.hs  ConfigPatch.hs  Timeline.hs
