cabal-version:      3.16
name:               idou
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:   src
  build-depends:    base >=4.14 && <5
                  , stm
                  , vector
  default-language: Haskell2010
  default-extensions:   ForeignFunctionInterface
                        Strict
                        UnicodeSyntax

  -- C / FFI bits
  include-dirs:     cbits
  c-sources:        cbits/miniaudio.c
                    cbits/miniaudio_helpers.c
                    cbits/miniaudio_rb_helpers.c
                    cbits/miniaudio_userdata.c
  ghc-options:      -Wall

executable idou
  hs-source-dirs:   app
                  , src
  main-is:          Main.hs
  other-modules:  Sound.Miniaudio
                  Sound.Miniaudio.RingBuffer
                  Engine.Core.Thread
                  Engine.Core.Queue
                  Audio.Types
                  Audio.Thread
                  Audio.Envelope
  build-depends:    base >=4.14 && <5
                ,   idou
                ,   stm
                ,   vector
  default-language: GHC2024
  default-extensions:   ForeignFunctionInterface
                        Strict
                        UnicodeSyntax
  ghc-options:      -Wall -threaded -rtsopts
