cabal-version:      3.16
name:               idou
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:   src
  build-depends:    base >=4.14 && <5
                  , bytestring
                  , stm
                  , vector
                  , containers
  default-language: Haskell2010
  default-extensions:   ForeignFunctionInterface
                        Strict
                        UnicodeSyntax

  -- C / FFI bits
  include-dirs:     cbits
  c-sources:        cbits/miniaudio.c
                    cbits/miniaudio_helpers.c
                    cbits/miniaudio_rb_helpers.c
                    cbits/miniaudio_userdata.c
  ghc-options:      -Wall

executable idou
  hs-source-dirs:   app
                  , src
  main-is:          Main.hs
  other-modules:  Sound.Miniaudio
                  Sound.Miniaudio.RingBuffer
                  Engine.Core.Thread
                  Engine.Core.Queue
                  Audio.Types
                  Audio.Thread
                  Audio.Thread.Types
                  Audio.Thread.Render
                  Audio.Thread.Voice
                  Audio.Thread.InstrumentTable
                  Audio.Envelope
                  Audio.Oscillator
                  Audio.Filter
                  Audio.Filter.Types
                  Audio.Filter.Biquad
                  Midi.Play
                  Midi.ZMidi.Core.Datatypes
                  Midi.ZMidi.Core.ReadFile
                  Midi.ZMidi.Core.Internal.ExtraTypes
                  Midi.ZMidi.Core.Internal.ParserMonad
  build-depends:    base >=4.14 && <5
                ,   bytestring
                ,   idou
                ,   stm
                ,   vector
                ,   containers
  default-language: GHC2024
  default-extensions:   ForeignFunctionInterface
                        Strict
                        UnicodeSyntax
  ghc-options:      -Wall -threaded -rtsopts
